# TSDB

./: .readthedocs.yaml  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/: stale_with_workflow.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  dataset-addition.yml
.github/workflows/: greetings.yml  linting.yml  publish_to_PyPI.yml  stale.yml  testing.yml  testing_ci.yml  testing_daily.yml
dataset_profiles/beijing_multisite_air_quality/: README.md
dataset_profiles/electricity_load_diagrams/: README.md
dataset_profiles/electricity_transformer_temperature/: README.md
dataset_profiles/italy_air_quality/: README.md
dataset_profiles/pems_traffic/: README.md
dataset_profiles/physionet_2012/: README.md
dataset_profiles/physionet_2019/: README.md
dataset_profiles/solar_alabama/: README.md
dataset_profiles/ucr_uea_datasets/: README.md
dataset_profiles/vessel_ais/: README.md
datasets/BeijingMultiSiteAirQuality/: README.md  data_download.sh
datasets/ElectricityLoadDiagrams/: README.md  data_download.sh
datasets/PhysioNet-2012/: README.md  data_download.sh
datasets/PhysioNet-2019/: README.md
datasets/UCR_UEA_Datasets/: README.md
datasets/Vessel AIS data/: README.md
docs/: conf.py  index.rst  references.bib  requirements.txt  tsdb.data_loading_funcs.rst  tsdb.rst
tests/: __init__.py  environment_for_conda_test.yml  test_tsdb.py
tsdb/: __init__.py  __version__.py  config.ini  config_template.ini  data_processing.py  database.py  version.py
tsdb/data_loading_funcs/: __init__.py  beijing_multisite_air_quality.py  electricity_load_diagrams.py  load_AIS.py  physionet_2012.py  physionet_2019.py  ucr_uea_datasets.py  vessel_AIS.py  vessel_ais.py
tsdb/loading_funcs/: __init__.py  beijing_multisite_air_quality.py  electricity_load_diagrams.py  electricity_transformer_temperature.py  italy_air_quality.py  pems_traffic.py  physionet_2012.py  physionet_2019.py  solar_alabama.py  ucr_uea_datasets.py  vessel_ais.py
tsdb/tests/: __init__.py  test_tsdb.py
tsdb/utils/: __init__.py  config.py  downloading.py  file.py  logging.py
